made styles.css, coloured blocks can be diaplyed on grid

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Tetris</title>
+      <link rel="stylesheet" href="./styles/styles.css">
    </head>
    <body>
       <h1>Tetris</h1>
