implement html but no css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
    </head>
    <body>
       <div id="main-container">
+         <div class='instructionsContainer'> Player 1 Controls:<br> &nbsp;← : Move left<br>&nbsp;→ : Move Right<br>
+           <br>  Player 2 Controls:<br>&nbsp;a : Move Left<br>&nbsp;d : Move Right  </div>
+         
+       </div>    
 
         <script type="text/javascript" src="bundle.js"></script>
-      </div>    
    </body>
 </html>
