added a player controls box to html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
    </head>
    <body>
       <div id="main-container">
-         <div class='instructionsContainer'> Player 1 Controls:<br> &nbsp;← : Move left<br>&nbsp;→ : Move Right<br>
-           <br>  Player 2 Controls:<br>&nbsp;a : Move Left<br>&nbsp;d : Move Right  </div>
+         <div class='instructionsContainer'>
+            <span style="font-weight:bold">Player 1 Controls:</span>
+            &nbsp;&larr; : Move Left<br>
+            &nbsp;&rarr; : Move Right<br><br>
+
+            <span style="font-weight:bold">Player 2 Controls:</span>
+            &nbsp;a : Move Left<br>
+            &nbsp;d : Move Right  
+         </div>
          
        </div>    
 
