added animations to cellContainers upon gameOver

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+   <style>
+      @import url('https://fonts.cdnfonts.com/css/8bit-wonder');
+   </style>
    <head>
       <title>Tetris</title>
       <link rel="stylesheet" href="./styles/styles.css">
