--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
    </head>
    <body>
       <div id="main-container">
-         <img id="tetris-logo" src="./media/battle-tetris-logo.png">
+         <div class="image-container">
+            <img id="tetris-logo" class="logo" src="./media/battle-tetris-logo.png">
+         </div>
          <div class='instructionsContainer'>
             <span style="font-weight:bold">Player 1 Controls:</span>
             &nbsp;&larr; : Move Left<br>
