minor changes to instructionContainer structure

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
             <img id="tetris-logo" class="logo" src="./media/battle-tetris-logo.png">
          </div>
          <div class='instructionsContainer'>
-            <span style="font-weight:bold">Player 1 Controls:</span>
-            &nbsp;&larr; : Move Left<br>
-            &nbsp;&rarr; : Move Right<br><br>
-
-            <span style="font-weight:bold">Player 2 Controls:</span>
-            &nbsp;a : Move Left<br>
-            &nbsp;d : Move Right  
+            <div class='playerContainer player2'>
+               <span style="font-weight:bold">Player 2 Controls:</span>
+               &nbsp;a : Move Left<br>
+               &nbsp;d : Move Right  
+            </div>
+            <div class='playerContainer player1'>
+               <span style="font-weight:bold">Player 1 Controls:</span>
+               &nbsp;&larr; : Move Left<br>
+               &nbsp;&rarr; : Move Right
+            </div>
          </div>
-         
        </div>    
 
         <script type="text/javascript" src="bundle.js"></script>
