Basic structure created for implementing powerups

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <div class='playerContainer player2'>
                <span style="font-weight:bold">Player 2 Controls:</span>
                &nbsp;a : Move Left<br>
-               &nbsp;d : Move Right  
+               &nbsp;d : Move Right<br>
+               &nbsp;w : Rotate
+            </div>
+            <div class='playerContainer'>
+               <span style="font-weight:bold">Controls:</span>
+               &nbsp;p : Pause
             </div>
             <div class='playerContainer player1'>
                <span style="font-weight:bold">Player 1 Controls:</span>
