update #displayActivePlayer to just change the content of the div and add div to the html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             &nbsp;a : Move Left<br>
             &nbsp;d : Move Right  
          </div>
+         <div class="activePlayer">Active player: Player 1</div>
          
        </div>    
 
