--- a/index.html
+++ b/index.html
@@ -14,20 +14,55 @@
             <img id="tetris-logo" class="logo" src="./media/battle-tetris-logo.png">
          </div>
          <div class='instructionsContainer'>
-            <div class='playerContainer player2'>
-               <span style="font-weight:bold">Player 2 Controls:</span>
+            <div class='uiContainer player2'>
+               <span style="font-weight:bold">Player 2</span>
+               <span style="font-weight:bold">Lines cleared:</span>
+               <span class="linesCleared player2">0</span>
+               <span style="font-weight:bold">Next power-up:</span>
+               <span class="nextPowerUp player2"></span>
+               <span class="linesCleared player2"></span>
+               <span style="font-weight:bold">Controls:</span>
                &nbsp;a : Move Left<br>
                &nbsp;d : Move Right<br>
-               &nbsp;w : Rotate
+               &nbsp;s : Rotate<br>
+               &nbsp;w : Speed up
             </div>
-            <div class='playerContainer'>
+            <div class='uiContainer player1'>
+               <span style="font-weight:bold">Player 1</span>
+               <span style="font-weight:bold">Lines cleared:</span>
+               <span class="linesCleared player2">0</span>
+               <span style="font-weight:bold">Next power-up:</span>
+               <span class="nextPowerUp player2"></span>
                <span style="font-weight:bold">Controls:</span>
-               &nbsp;p : Pause
-            </div>
-            <div class='playerContainer player1'>
-               <span style="font-weight:bold">Player 1 Controls:</span>
                &nbsp;&larr; : Move Left<br>
-               &nbsp;&rarr; : Move Right
+               &nbsp;&rarr; : Move Right<br>
+               &nbsp;&uarr; : Rotate<br>
+               &nbsp;&darr; : Speed up
+            </div>
+         </div>
+         <div id="gridElement"></div>
+         <div class="instructionsContainer">
+            <div class='uiContainer'>
+               <span style="font-weight:bold">Controls:</span>
+               &nbsp;p : Pause<br>
+               &nbsp;r : Restart
+            </div>
+            <div class="uiContainer">
+               <span style="font-weight:bold">Active Player:</span>
+               <span id="activePlayer"></span>
+            </div>
+            <div class="uiContainer">
+               <span style="font-weight:bold">Power-Ups</span>
+               <span style="font-weight:bold">Opponent Speed Up:</span>
+               &nbsp;Increases the speed at which<br>
+               &nbsp;opponents pieces will fall
+               <span style="font-weight:bold">Bizarre Tetromino:</span>
+               &nbsp;The next piece generated for the<br>
+               &nbsp;opponent will be a significantly<br>
+               &nbsp;more complex piece
+               <span style="font-weight:bold">Remove a block</span>
+               &nbsp;Removes a random block in the<br>
+               &nbsp;opponents side of the board
             </div>
          </div>
        </div>    
