add render of music volume status

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             &nbsp;a : Move Left<br>
             &nbsp;d : Move Right  
          </div>
+         <div class="musicMuted">Music Volume: On</div>
+         </div>  
          
        </div>    
 
