bound Players variables to UI

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
             <div class='uiContainer player2'>
                <span style="font-weight:bold">Player 2</span>
                <span style="font-weight:bold">Lines cleared:</span>
-               <span class="linesCleared player2">0</span>
+               <span id="linesClearedP2">0</span>
                <span style="font-weight:bold">Next power-up:</span>
-               <span class="nextPowerUp player2"></span>
-               <span class="linesCleared player2"></span>
+               <span id="nextPowerUpP2">Opponent Speed Up</span>
                <span style="font-weight:bold">Controls:</span>
                &nbsp;a : Move Left<br>
                &nbsp;d : Move Right<br>
@@ -30,9 +29,9 @@
             <div class='uiContainer player1'>
                <span style="font-weight:bold">Player 1</span>
                <span style="font-weight:bold">Lines cleared:</span>
-               <span class="linesCleared player2">0</span>
+               <span id="linesClearedP1">0</span>
                <span style="font-weight:bold">Next power-up:</span>
-               <span class="nextPowerUp player2"></span>
+               <span id="nextPowerUpP1">Opponent Speed Up</span>
                <span style="font-weight:bold">Controls:</span>
                &nbsp;&larr; : Move Left<br>
                &nbsp;&rarr; : Move Right<br>
@@ -54,15 +53,11 @@
             <div class="uiContainer">
                <span style="font-weight:bold">Power-Ups</span>
                <span style="font-weight:bold">Opponent Speed Up:</span>
-               &nbsp;Increases the speed at which<br>
-               &nbsp;opponents pieces will fall
+               Increases the speed at which opponents pieces will fall
                <span style="font-weight:bold">Bizarre Tetromino:</span>
-               &nbsp;The next piece generated for the<br>
-               &nbsp;opponent will be a significantly<br>
-               &nbsp;more complex piece
-               <span style="font-weight:bold">Remove a block</span>
-               &nbsp;Removes a random block in the<br>
-               &nbsp;opponents side of the board
+               The next piece generated for the opponent will be a significantly more complex piece
+               <span style="font-weight:bold">Remove A Block:</span>
+               Removes a random block in the opponents side of the board
             </div>
          </div>
        </div>    
