--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
          <div class="instructionsContainer">
             <div class='uiContainer'>
                <span style="font-weight:bold">Controls:</span>
-               &nbsp;p : Pause<br>
-               &nbsp;r : Restart
+               &nbsp;spacebar : Pause<br>
+               &nbsp;r : Restart<br>
+               &nbsp;m : Mute
             </div>
             <div class="uiContainer">
                <span style="font-weight:bold">Active Player:</span>
