seperation of text boxes to make more readable

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
          </div>
          <div class='instructionsContainer'>
             <div class='uiContainer player2'>
-               <span style="font-weight:bold">Player 2</span>
-               <span style="font-weight:bold">Lines cleared:</span>
-               <span id="linesClearedP2">0</span>
-               <span style="font-weight:bold">Next power-up:</span>
-               <span id="nextPowerUpP2">Opponent Speed Up</span>
-               <span style="font-weight:bold">Controls:</span>
+               <span class="box title" style="font-weight:bold">Player 2</span><br>
+               <span class="headers" style="font-weight:bold">Lines cleared:</span><br>
+               <span id="linesClearedP2">0</span><br>
+               <span class="headers" style="font-weight:bold">Next power-up:</span><br>
+               <span id="nextPowerUpP2">Opponent Speed Up</span><br>
+               <span class="headers" style="font-weight:bold">Controls:</span><br>
                &nbsp;a : Move Left<br>
                &nbsp;d : Move Right<br>
                &nbsp;s : Rotate<br>
                &nbsp;w : Speed up
             </div>
             <div class='uiContainer player1'>
-               <span style="font-weight:bold">Player 1</span>
-               <span style="font-weight:bold">Lines cleared:</span>
-               <span id="linesClearedP1">0</span>
-               <span style="font-weight:bold">Next power-up:</span>
-               <span id="nextPowerUpP1">Opponent Speed Up</span>
-               <span style="font-weight:bold">Controls:</span>
+               <span class="box title" style="font-weight:bold">Player 1</span><br>
+               <span class="headers" style="font-weight:bold">Lines cleared:</span><br>
+               <span id="linesClearedP1">0</span><br>
+               <span class="headers" style="font-weight:bold">Next power-up:</span><br>
+               <span id="nextPowerUpP1">Opponent Speed Up</span><br>
+               <span class="headers" style="font-weight:bold">Controls:</span><br>
                &nbsp;&larr; : Move Left<br>
                &nbsp;&rarr; : Move Right<br>
                &nbsp;&uarr; : Rotate<br>
@@ -42,24 +42,24 @@
          <div id="gridElement"></div>
          <div class="instructionsContainer">
             <div class='uiContainer'>
-               <span style="font-weight:bold">Controls:</span>
+               <span class="headers" style="font-weight:bold">Controls:</span><br>
                &nbsp;spacebar : Pause<br>
                &nbsp;r : Restart<br>
                &nbsp;m : Mute
             </div>
             <div class="uiContainer">
-               <span style="font-weight:bold">Active Player:</span>
-               <span id="activePlayer"></span>
-               <span style="font-weight:bold">Music:</span>
+               <span class="headers" style="font-weight:bold">Active Player:</span>
+               <span id="activePlayer"></span><br>
+               <span class="headers" style="font-weight:bold">Music:</span>
                <div id="musicMuted">On</div>
             </div>
             <div class="uiContainer">
-               <span style="font-weight:bold">Power-Ups</span>
-               <span style="font-weight:bold">Opponent Speed Up:</span>
-               Increases the speed at which opponents pieces will fall
-               <span style="font-weight:bold">Bizarre Tetromino:</span>
-               The next piece generated for the opponent will be a significantly more complex piece
-               <span style="font-weight:bold">Remove A Block:</span>
+               <span class="box title" style="font-weight:bold">Power-Ups</span><br>
+               <span class="headers" style="font-weight:bold">Opponent Speed Up:</span>
+               Increases the speed at which opponents pieces will fall<br><br>
+               <span class="headers" style="font-weight:bold">Bizarre Tetromino:</span>
+               The next piece generated for the opponent will be a significantly more complex piece<br><br>
+               <span class="headers" style="font-weight:bold">Remove A Block:</span>
                Removes a random block in the opponents side of the board
             </div>
          </div>
