done reworking CSS for video demo

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
          </div>
          <div class='instructionsContainer'>
             <div class='uiContainer player2'>
-               <span class="box title" style="font-weight:bold">Player 2</span><br>
-               <span class="headers" style="font-weight:bold">Lines cleared:</span><br>
-               <span id="linesClearedP2">0</span><br>
-               <span class="headers" style="font-weight:bold">Next power-up:</span><br>
-               <span id="nextPowerUpP2">Opponent Speed Up</span><br>
+               <span class="boxTitle" style="font-weight:bold">Player 2</span><br>
+               <div><span class="headers" style="font-weight:bold">Lines cleared:</span><br>
+               &nbsp;
+               <span id="linesClearedP2">0</span></div>
+               <div><span class="headers" style="font-weight:bold">Next power-up:</span><br>
+               &nbsp;
+               <span id="nextPowerUpP2">Opponent Speed Up</span></div>
                <span class="headers" style="font-weight:bold">Controls:</span><br>
                &nbsp;a : Move Left<br>
                &nbsp;d : Move Right<br>
@@ -27,11 +29,13 @@
                &nbsp;w : Speed up
             </div>
             <div class='uiContainer player1'>
-               <span class="box title" style="font-weight:bold">Player 1</span><br>
-               <span class="headers" style="font-weight:bold">Lines cleared:</span><br>
-               <span id="linesClearedP1">0</span><br>
-               <span class="headers" style="font-weight:bold">Next power-up:</span><br>
-               <span id="nextPowerUpP1">Opponent Speed Up</span><br>
+               <span class="boxTitle" style="font-weight:bold">Player 1</span><br>
+               <div><span class="headers" style="font-weight:bold">Lines cleared:</span><br>
+               &nbsp;
+               <span id="linesClearedP1">0</span></div>
+               <div><span class="headers" style="font-weight:bold">Next power-up:</span><br>
+               &nbsp;
+               <span id="nextPowerUpP1">Opponent Speed Up</span></div>
                <span class="headers" style="font-weight:bold">Controls:</span><br>
                &nbsp;&larr; : Move Left<br>
                &nbsp;&rarr; : Move Right<br>
@@ -42,19 +46,21 @@
          <div id="gridElement"></div>
          <div class="instructionsContainer">
             <div class='uiContainer'>
-               <span class="headers" style="font-weight:bold">Controls:</span><br>
-               &nbsp;spacebar : Pause<br>
-               &nbsp;r : Restart<br>
-               &nbsp;m : Mute
+               <span class="boxTitle" style="font-weight:bold">Controls:</span><br>
+               <div>&nbsp;<strong>spacebar</strong> : &nbsp;Pause<br></div>
+               <div>&nbsp;<strong>r</strong> : Restart<br></div>
+               <div>&nbsp;<strong>m</strong> : Mute</div>
             </div>
             <div class="uiContainer">
-               <span class="headers" style="font-weight:bold">Active Player:</span>
-               <span id="activePlayer"></span><br>
-               <span class="headers" style="font-weight:bold">Music:</span>
-               <div id="musicMuted">On</div>
+               <div><span class="headers" style="font-weight:bold">Active Player:</span>
+               &nbsp;
+               <span id="activePlayer"></span></div>
+               <div><span class="headers" style="font-weight:bold">Music:</span>
+               &nbsp;
+               <div id="musicMuted">On</div></div>
             </div>
             <div class="uiContainer">
-               <span class="box title" style="font-weight:bold">Power-Ups</span><br>
+               <span class="boxTitle" style="font-weight:bold">Power-Ups:</span><br>
                <span class="headers" style="font-weight:bold">Opponent Speed Up:</span>
                Increases the speed at which opponents pieces will fall<br><br>
                <span class="headers" style="font-weight:bold">Bizarre Tetromino:</span>
